20. Final Mega Capstone Project/projects/14-django-logistics-workers/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logistics-django
  labels:
    app.kubernetes.io/part-of: logistics
    pod-security.kubernetes.io/enforce: restricted
