20. Final Mega Capstone Project/projects/14-django-logistics-workers/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logistics
  namespace: logistics-django
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
spec:
  ingressClassName: nginx
  rules:
    - host: logistics.local.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: logistics-web, port: { number: 80 } } }
